--- a/list.html
+++ b/list.html
@@ -14,7 +14,6 @@
         </div>
         <div class="nav-links">
           <a href="/map.html">Mapa</a>
-          <a href="/gallery.html">Galerija</a>
           <a href="/list.html">Spisak</a>
         </div>
       </div>
@@ -22,6 +21,10 @@
     <div class="container">
       <div class="body-content">
         <h1>Spisak graničnih prelaza pokrivenih kamerama</h1>
+        <h3>
+          Podaci dobijeni sa sajta Ministarstva unutrašnjih poslova Republike Srbije, nalaze se na
+          <a href="http://www.mup.gov.rs/wps/portal/sr/kamer%D0%B5#!">linku</a>.
+        </h3>
         <table>
           <tr>
             <th>R. broj</th>
