--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
       <div class="container">
         <div class="logo">
-          <a href="#">Logo</a>
+          <img src="/logo/logo.png" />
         </div>
         <div class="nav-links">
           <a href="/map.html">Mapa</a>
